Fixes horizontal alignment of hero__footer

--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -108,12 +108,15 @@
 .hero__footer {
   position: absolute;
   bottom: 0;
+  left: 0;
+  right: 0;
   width: 100%;
-  max-width: 1200px - ($air);
-  padding: 0 $air;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
+  max-width: 1200px;
+  padding: 0 $baseline;
+  // margin: 0 auto;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
 }
 
 .hero__footer__link {
